testing/tests/00main/errors/main_missing_body.sasc
//! BUILD_EXIT_CODE=1

fn main()